<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/panel_bottom_height"
    tools:context=".ui.settings.SettingsFragment">
    <TextView
        android:id="@+id/labelWorkingPlace"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/small_horizontal_margin"
        android:text="@string/lbl_geofence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardGeofence"
        style="@style/CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelWorkingPlace">

        <TextView
            android:id="@+id/textViewAddress"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty" />
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/buttonGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/btn_current_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/labelDescription"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingVertical="@dimen/small_horizontal_margin"
        android:text="@string/lbl_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGetLocation"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/labelDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardGeofence" />

</androidx.constraintlayout.widget.ConstraintLayout>